service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hw3-deployment-service
spec:
  selector:
    app: hw3-deployment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      nodePort: 30080
  type: NodePort
