ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hw3-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: testdomain.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hw3-deployment-service
            port:
              number: 80
